--- a/template/css/style.css
+++ b/template/css/style.css
@@ -104,7 +104,7 @@ h4 a{
 
 /*style one*/
 .header-style1{
-	background:url(../images/img-bg-1.jpg) no-repeat center top;
+	background:url(../images/back.jpg) no-repeat center top;
 	background-size: cover;
 	background-position: top center;
 	background-repeat: no-repeat;
@@ -193,7 +193,7 @@ h4 a{
 }
 .counters .count-icon{
 	font-size:30px;
-	color:#ea9215;
+	color:#609966;
 	width:100%;
 }
 .counters .count-nos{
@@ -209,7 +209,7 @@ h4 a{
 	margin-bottom:60px;
 }
 .grey-bg{
-	background:#ededed;
+	background:#EDF1D6;
 	border-bottom:solid 1px #dbdbdb;
 	border-top:solid 1px #dbdbdb;
 	padding:80px 0 100px 0;
@@ -222,7 +222,7 @@ h4 a{
 }
 .fea-info i{
 	font-size:20px;
-	color:#c6801c;
+	color:#40513B;
 }
 ul.list-nav {
     margin: 50px 0 30px;
@@ -236,7 +236,7 @@ ul.list-nav li {
     position: relative;
 }
 ul.list-nav li i {
-    color: #ea9215;
+    color: #609966;
     font-size: 18px;
     left: 0;
     position: absolute;
@@ -266,7 +266,7 @@ ul.list-nav li i {
 	color:#000;
 }
 .cource-box .cource-text h4 span{
-	color:#dc8e1f;
+	color:#609966;
 	float:right;
 	font-weight:bold;
 	font-size:20px;
@@ -280,11 +280,11 @@ ul.list-nav li i {
 }
 .cource-box .cource-text span.comment, .cource-box .cource-text span.comment a{
     float: right;
-	color:#c6801c;
+	color:#40513B;
 }
 .cource-box .cource-text span i{
     font-size:14px;
-	color:#c6801c;
+	color:#40513B;
 }
 
 
@@ -422,8 +422,8 @@ ul.list-nav li i {
     bottom: -45px;
 }
 .carousel-indicators li {
-    background: #f5b120 none repeat scroll 0 0;
-    border-color: #f5b120;
+    background: #609966 none repeat scroll 0 0;
+    border-color: #609966;
     border-radius: 100%;
     height: 12px;
     margin: 0;
@@ -441,7 +441,7 @@ ul.list-nav li i {
 	text-transform: uppercase;
 	transition: all 0.3s ease 0s;
 	z-index: 2;
-	background: rgba(27, 180, 185, 0.90);
+	background: #609966;
 	border:none;
 }
 .btn::after {
@@ -461,32 +461,32 @@ ul.list-nav li i {
 	width: 101%;
 }
 .btn:hover {
-	background: rgba(27, 180, 185, 1);
+	background:#609966;
 }
 .btn:focus {
 	outline: 0 none;
-	background: rgba(27, 180, 185, 0.90);
+	background: #40513B;
 	border:none;
 }
 .btn.btn-small {
-	background-color: #30babe;
+	background-color:#9DC08B;
 	border-radius: 30pxpx;
 	color: #fff;
 	font-size: 14px;
 	padding: 10px 20px;
 }
 .btn.btn-small::after {
-	background-color: #1fadb1;
+	background-color: #9DC08B;
 }
 .btn.btn-orange {
-	background-color: #db922a;
+	background-color: #609966;
 	border-radius: 30pxpx;
 	color: #fff;
 	font-size: 14px;
 	padding: 10px 20px;
 }
 .btn.btn-orange::after {
-	background-color: #c6801c;
+	background-color: #40513B;
 }
 
 /* =========== blog ============= */
@@ -526,7 +526,7 @@ ul.list-nav li i {
     color: #656565;
 }
 .cat-list ul li a:hover {
-    color: #f5b120;
+    color: #609966;
 }
 .c-post-img {
     float: left;
@@ -630,7 +630,7 @@ ul.address-info li {
 	text-align:center;
 }
 .widget .course-details > ul > li.course-price > strong {
-    color: #dc8e1f;
+    color: #609966;
     display: inline-block;
     padding-top: 10px;
 }
@@ -675,7 +675,7 @@ footer {
 	color:#5a5a5a;
 }
 .footer-widget .footer-links li a:hover, .footer-widget a:hover{
-	color:#f5b120;
+	color:#609966;
 }
 .copyright{
 	padding-top:70px;
@@ -691,11 +691,11 @@ ul.social-icons li{
     padding: 0;
 }
 ul.social-icons li a{
-	color: #ea9215;
+	color: #609966;
 	font-size:30px;
 }
 ul.social-icons li a:hover{
-	color: #1bb4b9;
+	color: #609966;
 }
 /* scroll up */
 .scrollup {
@@ -707,7 +707,7 @@ ul.social-icons li a:hover{
 	right: 20px;
 	display: none;
 	text-indent: -9999px;
-	background: #1bb4b9 url(../images/scroll-top-arrow.png) no-repeat 15px 14px;
+	background: #609966 url(../images/scroll-top-arrow.png) no-repeat 15px 14px;
 	z-index: 999;
 	border-radius: 5px;
 }
