--- a/template/css/style.css
+++ b/template/css/style.css
@@ -142,7 +142,7 @@ h4 a{
 }
 /* page sub headers */
 .page-header{
-	background: url(../images/img-bg-3.jpg) no-repeat scroll center top;
+	background: url(../images/back2.jpg) no-repeat scroll center top;
 	background-size: cover;
 	float: left;
 	margin: 0;
